--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "face-ml-node",
   "version": "1.0.0",
-  "description": "Hello World API in Node.js",
+  "description": "Face Comparison API using Machine Learning",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "download-models": "node utils/downloadModels.js",
+    "postinstall": "node utils/downloadModels.js"
   },
   "engines": {
     "node": ">=18.x"
@@ -14,6 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@tensorflow/tfjs": "^4.22.0",
+    "canvas": "^3.2.0",
+    "express": "^4.18.2",
+    "face-api.js": "^0.22.2",
+    "multer": "^2.0.2"
   }
 }
